# braver-tz

./: .gitignore  CHANGELOG.md  README.md  braver.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  smoke.yml
docs/: repository-transfer.md
packaging/: README.md
packaging/homebrew/: README.md  brave-updater.rb
packaging/pypi/: README.md
packaging/scoop/: README.md  brave-updater.json
packaging/windows/: README.md  entrypoint.py
packaging/winget/: README.md
scripts/: render_distribution_files.py
src/brave_updater/: __init__.py  cli.py  console.py  distribution.py  download.py  installers.py  models.py  network.py  providers.py  service.py  system.py
tests/: test_cli.py  test_console.py  test_distribution.py  test_download.py  test_installers.py  test_packaging.py  test_providers.py  test_service.py  test_system.py
